fix big card footer when clip titles too long

--- a/clips/static/css/style.css
+++ b/clips/static/css/style.css
@@ -1,5 +1,11 @@
 .card {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-footer {
+    margin-top: auto;
 }
 
 .unknown_game {
